@@ -760,6 +760,15 @@ but don't want to have to write C code for all your widgets or deal with messy
 SQL statements.  
 </ul>
 
+<ul>
+<li><a href="http://roan.free.fr/softs/oggd/index-en.html">OggDoctor</a> -
+a toolkit for music in ogg/vorbis file format.
+</ul>
+
+<ul>
+<li><a href="http://win2linux.net/down.html">Xsox</a> -
+graphical X front end for the Sox sound program.
+</ul>
 
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
