@@ -1,3 +1,7 @@
+2002-07-01  Damon Chaplin  <damon@ximian.com>
+
+	* apps.html: added OggDoctor and Xsox.
+
 2002-05-21  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: added Bond.
